[GSB] Ensure that we don't build an invalid potential archetype.

Queries against the generic signature might use types that are
ill-formed for that generic signature, e.g., because they refer to
associated types of unrelated protocols. Detect such conditions to
maintain GSB invariants that all potential archetypes in a well-formed
generic signature are well-formed.

Fixes the crash in SR-6797 / rdar://problem/36673825.

(cherry picked from commit d18ecda7964ca709987595ac618c888da17ec492)